almost final draft

--- a/index.html
+++ b/index.html
@@ -100,14 +100,22 @@
 					</div>
 				</section>
 				<section>
-					<h3>our example - bank generic</h3>
+					<h3>our example - bank générique</h3>
+					<h4>payment card vault use case</h4>
+					<p>allow merchant to capture sensitive data directly from customer app session</p>
+					<div class="stretch">
+						<img src="img/vaultWorkflow.png"/>
+					</div>
+				</section>
+				<section>
+					<h3>our example - bank générique</h3>
 
 					<div class="stretch">
 						<img src="img/gCardArchitecture.png"/>
 					</div>
 				</section>
 				<section>
-					<h3>our example - banc generic</h3>
+					<h3>our example - bank générique</h3>
 					<h4> focus</h4>
 
 					<div  class="stretch">
@@ -271,7 +279,10 @@
 					</section>
 					<section>
 						<h3>serverless.yml - the glue</h3>
-						<!--- todo: add diagram combining resources and functions -->
+						<div class="stretch">
+							<img src="img/serverless_glue.png"/>
+							<p></p>
+						</div>
 					</section>
 					<section>
 						<h3>environment configuration</h3>
@@ -283,7 +294,7 @@
 					<section>
 						<h3>populating environment configuration</h3>
 						<div class="stretch">
-							<img src="img/envSpec_smol.png"/>
+							<img alt="sending config details to secure storage" src="img/publish_environment.png"/>
 							<p></p>
 						</div>
 					</section>
@@ -310,6 +321,14 @@
 							<img src="img/envSpec_smol.png"/>
 							<p></p>
 						</div>
+					</section>
+					<section>
+						<h3>deployment pipeline</h3>
+						<div class="stretch">
+							<img alt="circle ci workflow" src="img/circleWorkflow.png"/>
+							<p>same approach available from most CI services</p>
+						</div>
+
 					</section>
 					<section>
 						<h3>deployment pipeline</h3>
