--- a/index.html
+++ b/index.html
@@ -105,15 +105,17 @@
 					<h3>whats the catch?</h3>
 
 					<ul style="font-size: 30px">
-						<li>extreme abstraction -needs a way to connect resources to functions</li>
+						<li>extreme abstraction - needs a way to connect resources to functions</li>
 						<li>emergent tools and patterns available</li>
 					</ul>
-					<h4>and the solution?</h4>
+					<br><br>
+					<div class="fragment">
+					<h3>...and the solution.</h3>
 					<ul>
 						<li>deployment chassis driven development</li>
 						<li>architectural discipline</li>
 					</ul>
-
+					</div>
 
 				</section>
 				<section>
@@ -394,16 +396,6 @@
 							<li>advanced tracing - honeycomb.io</li>
 						</ul>
 					</section>
-					<section>
-						<h3>unit testing</h3>
-						<div class="stretch">
-							<img alt="unit testing folder structure" src="img/test_structure.png"/>
-							<p></p>
-						</div>
-						<ul>
-							<li>standard unit testing at module level</li>
-						</ul>
-					</section>
 				</section>
 				<section>
 					<section>
@@ -469,7 +461,7 @@
 						</ul>
 					</section>
 					<section>
-						<h3>use cases</h3>
+						<h3>other use cases</h3>
 						<ul>
 							<li>decompose monoliths</li>
 							<li>web apps or web apis</li>
@@ -485,7 +477,7 @@
 						</div>
 					</section>
 					<section>
-						<h3>decompose a faulty monolith</h3>
+						<h3>use case - decompose a faulty monolith</h3>
 						<p>after</p>
 						<div class="stretch">
 							<img alt="simple web distro service" src="img/breaking_monolyth_full.png"/>
@@ -493,21 +485,11 @@
 					</section>
 				</section>
 				<section>
-					<h3>themes</h3>
-					<div>
-						<ul>
-							<li class="notlit">business and operational benefits and challenges</li>
-							<li class="notlit">chassis deep dive</li>
-							<li class="notlit">key architectural concerns</li>
-							<li class="highlit">technical demonstration</li>
-						</ul>
-					</div>
-				</section>
-				<section>
 					<h3>takeaways</h3>
 					<ul>
 						<li>multiple orders of magnitude cost savings</li>
-						<li>declarative resources and security grant visibility and reassurance</li>
+						<li>fast iteration cycles due to developers being adjacent to production</li>
+						<li>improved security profile and reduced responsibility</li>
 						<li>focus on domain design and engineering discipline</li>
 					</ul>
 				</section>
