--- a/index.html
+++ b/index.html
@@ -219,12 +219,11 @@
 					</section>
 					<section>
 						<h3>challenges</h3>
-
 						<ul>
-							<li>navigating enterprise DA's is challenging</li>
-							<li>devOps and secOps will love you</li>
-							<li>enterprise doesnt like javascript</li>
-							<li>open source all the way down.</li>
+							<li class="fragment">navigating enterprise DA's is challenging</li>
+							<li class="fragment">devOps and secOps will love you</li>
+							<li class="fragment">enterprise doesnt like javascript</li>
+							<li class="fragment">open source all the way down.</li>
 						</ul>
 					</section>
 				</section>
