--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 						<h3>challenges</h3>
 						<ul>
 							<li class="fragment">navigating enterprise DA's is challenging</li>
-							<li class="fragment">devOps and secOps will love you</li>
+							<li class="fragment">devOps and secOps will come love you</li>
 							<li class="fragment">enterprise doesnt like javascript</li>
 							<li class="fragment">open source all the way down.</li>
 						</ul>
