--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 						production ready MVP's
 					</h3>
 					<p style="font-size: 0.85em">
-						benefits of native serverless application development
+						benefits of chassis driven serverless development
 						<br><br><br>
 					</p>
 					<small class="footnote">
